[gd_scene load_steps=5 format=3 uid="uid://ce2apbskkrfd6"]

[ext_resource type="Script" path="res://Text/notebook_text.gd" id="1_ihedh"]
[ext_resource type="FontFile" uid="uid://cdcejrrv8mhwa" path="res://PixelPowerline-9xOK.ttf" id="2_7nflt"]
[ext_resource type="Texture2D" uid="uid://cjf6qp8ua6veq" path="res://Text/NotebookPage.png" id="2_rpynn"]

[sub_resource type="LabelSettings" id="LabelSettings_hcyei"]
font = ExtResource("2_7nflt")
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="NotebookText" type="Node"]
script = ExtResource("1_ihedh")

[node name="characterTimer" type="Timer" parent="."]

[node name="lineTimer" type="Timer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -375.0
offset_right = 500.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_rpynn")

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -28.5
offset_right = 0.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_hcyei")

[connection signal="timeout" from="characterTimer" to="." method="_on_character_timer_timeout"]
[connection signal="timeout" from="lineTimer" to="." method="_on_line_timer_timeout"]
